Add studio view.

--- a/forum_leaderboard/static/html/forum_leaderboard_studio.html
+++ b/forum_leaderboard/static/html/forum_leaderboard_studio.html
@@ -2,7 +2,7 @@
 <h2>{{ display_name }}</h2>
     <p>
         {% if discussion_id %}
-            This XBlock will show a leaderboard of top threads from Discussion ID <code>{{ discussion_id }}</code>
+            This XBlock will show a leaderboard of up to {{ count }} top threads from Discussion ID <code>{{ discussion_id }}</code>
         {% else %}
             You will need to configure this XBlock with a Discussion ID for it to display top threads.
         {% endif %}
