Dummy comment service implemented, now works with SDK.

--- a/forum_leaderboard/static/html/forum_leaderboard.html
+++ b/forum_leaderboard/static/html/forum_leaderboard.html
@@ -3,6 +3,8 @@
 <ul>
     {% for thread in threads %}
         <li>{{ thread.title }} (Score: {{ thread.votes.point }})</li>
+    {% empty %}
+        <li>No threads with a score are available.</li>
     {% endfor %}
 </ul>
 </div>
