Structure set up for tests. Small adjustments.

--- a/forum_leaderboard/static/html/forum_leaderboard.html
+++ b/forum_leaderboard/static/html/forum_leaderboard.html
@@ -2,7 +2,7 @@
 <h2>{{ display_name }}</h2>
 <ul>
     {% for thread in threads %}
-        <li><a href="{{ thread.url }}">{{ thread.title }}</a> (Score: {{ thread.votes.point }})</li>
+        <li><a href="{{ thread.url }}">{{ thread.title }}</a> by {{thread.username}} (Score: {{ thread.votes.point }})</li>
     {% empty %}
         <li>No threads with a score are available.</li>
     {% endfor %}
